--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -172,7 +172,7 @@ jobs:
       - name: Archive artifact
         uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: result-${{ matrix.TARGET }}
           path: |
             ./artifacts
 
@@ -184,12 +184,11 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: result
           path: ./artifacts
       - name: List
         run: find ./artifacts
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./artifacts/*.tar.gz
+          files: ./artifacts/*/*.tar.gz
           
