--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -126,15 +126,19 @@ jobs:
         run: |
           cat <<EOF > Cross.toml
           [target.x86_64-unknown-linux-musl]
+          image = "ghcr.io/cross-rs/x86_64-unknown-linux-musl:main"
           pre-build = ["apk add --no-cache alsa-lib-dev"]
 
           [target.aarch64-unknown-linux-musl]
+          image = "ghcr.io/cross-rs/aarch64-unknown-linux-musl:main"
           pre-build = ["apk add --no-cache alsa-lib-dev"]
 
           [target.armv7-unknown-linux-musleabihf]
+          image = "ghcr.io/cross-rs/armv7-unknown-linux-musleabihf:main"
           pre-build = ["apk add --no-cache alsa-lib-dev"]
 
           [target.arm-unknown-linux-musleabihf]
+          image = "ghcr.io/cross-rs/arm-unknown-linux-musleabihf:main"
           pre-build = ["apk add --no-cache alsa-lib-dev"]
           EOF
 
@@ -155,20 +159,22 @@ jobs:
       - name: Compress
         run: |
           mkdir -p ./artifacts
-          # windows is the only OS using a different convention for executable file name
-          if [[ $OS =~ ^windows.*$ ]]; then
-              EXEC=$NAME.exe
-          else
-              EXEC=$NAME
-          fi
           if [[ $GITHUB_REF_TYPE =~ ^tag$ ]]; then
             TAG=$GITHUB_REF_NAME
           else
             TAG=$GITHUB_SHA
           fi
-          mv ./target/$TARGET/release/$EXEC ./$EXEC
-          tar -czf ./artifacts/$NAME-$TARGET-$TAG.tar.gz $EXEC
-          
+          if [[ $OS =~ ^windows.*$ ]]; then
+              EXEC=$NAME.exe
+              mv ./target/$TARGET/release/$EXEC ./$EXEC
+              # Use 'zip' for Windows
+              zip ./artifacts/$NAME-$TARGET-$TAG.zip $EXEC readme.md LICENSE.txt
+          else
+              EXEC=$NAME
+              mv ./target/$TARGET/release/$EXEC ./$EXEC
+              # Use 'tar' for Linux/macOS
+              tar -czf ./artifacts/$NAME-$TARGET-$TAG.tar.gz $EXEC readme.md LICENSE.txt
+          fi
       - name: Archive artifact
         uses: actions/upload-artifact@v4
         with:
@@ -190,5 +196,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./artifacts/*/*.tar.gz
-          
+           files: |
+            ./artifacts/*/*.tar.gz
+            ./artifacts/*/*.zip
