--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -153,7 +153,8 @@ jobs:
             # [FIX] Set the pkg-config path for GNU cross-compilation
             if [[ $TARGET == 'aarch64-unknown-linux-gnu' ]]; then
               export PKG_CONFIG_PATH="/usr/lib/aarch64-linux-gnu/pkgconfig"
-            elif [[ $TARGET == *arm*-linux-gnueabihf' ]]; then
+            # [SYNTAX FIX] Removed the stray single quote from the end of the line
+            elif [[ $TARGET == *arm*-linux-gnueabihf ]]; then
               # This covers both 'armv7' and 'arm' targets
               export PKG_CONFIG_PATH="/usr/lib/arm-linux-gnueabihf/pkgconfig"
             fi
