--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
-cpal = "0.16.0"
+cpal = { version = "0.16.0", features = ["jack"] }
 crossterm = "0.29"
 decibel = "0.1.2"
 ini = "1.3.0"
