--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ simplelog = "0.12"
 midly = "0.5"
 clap = { version = "4.5", features = ["derive"] }
 fft-convolver = "0.2.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.release]
 lto = true
