--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-pipes"
 description = "Virtual pipe organ simulator"
-version = "0.4.2"
+version = "0.4.3"
 license = "GPL-2.0-or-later"
 authors = ["dividebysandwich"]
 repository = "https://github.com/dividebysandwich/rusty-pipes"
@@ -32,6 +32,7 @@ serde_json = "1.0"
 quick-xml = { version = "0.38", features = ["serde", "serialize"] }
 eframe = "0.33"
 egui = "0.33"
+rfd = "0.15"
 hotpath = { version = "0.5", optional = true }
 
 [features]
