--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ dirs = "6.0"
 hotpath = { version = "0.7", optional = true }
 rayon = "1.11"
 symphonia = { version = "0.5", features = ["wav"] }
+sys-locale = "0.3.2"
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
