--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,8 +36,9 @@ jobs:
   flatpak:
     name: Build Linux Flatpak
     runs-on: ubuntu-latest
+    needs: test
     container:
-      image: bilelmoussaoui/flatpak-github-actions:freedesktop-25.08
+      image: ghcr.io/flathub-infra/flatpak-github-actions:freedesktop-25.08
       options: --privileged
     steps:
       - name: Checkout code
@@ -72,7 +73,7 @@ jobs:
             OS: macos-latest
           - TARGET: x86_64-pc-windows-msvc
             OS: windows-latest
-    needs: test
+    needs: build-deb
     runs-on: ${{ matrix.OS }}
     env:
       NAME: rusty-pipes
@@ -184,7 +185,7 @@ jobs:
             ./artifacts
 
   build-deb:
-    needs: test
+    needs: flatpak
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
