--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,9 @@ symphonia = { version = "0.5", features = ["wav"] }
 sys-locale = "0.3.2"
 open = "5.3.3"
 chrono = "0.4"
+actix-web = "4"
+utoipa = { version = "4", features = ["actix_extras"] }
+utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
