--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-pipes"
 description = "Virtual pipe organ simulator"
-version = "1.4.2"
+version = "1.4.3"
 license = "GPL-2.0-or-later"
 authors = ["dividebysandwich"]
 repository = "https://github.com/dividebysandwich/rusty-pipes"
@@ -56,7 +56,7 @@ hotpath-off = ["hotpath/hotpath-off"]
 lto = true
 
 [package.metadata.deb]
-depends = "libasound2, libjack-jackd2-0, libx11-6, libxkbcommon0, libwayland-client0, libegl1, libgl1, desktop-file-utils"
+depends = "libasound2, libpulse-dev, libjack-jackd2-0, libx11-6, libxkbcommon0, libwayland-client0, libegl1, libgl1, desktop-file-utils"
 assets = [
     ["assets/rusty-pipes.desktop", "/usr/share/applications/rusty-pipes.desktop", "644"],
     ["assets/rusty-pipes-text.desktop", "/usr/share/applications/rusty-pipes-text.desktop", "644"],
@@ -68,7 +68,7 @@ assets = [
 name = "Rusty Pipes"
 identifier = "com.dividebysandwich.rustypipes"
 icon = ["assets/rusty-pipes.icns"]
-version = "1.4.2" 
+version = "1.4.3" 
 copyright = "Copyright 2025-2026 Dividebysandwich"
 category = "Music"
 short_description = "Virtual pipe organ simulator"
