--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
 rust-i18n = "3"
 audioadapter = "2.0"
 audioadapter-buffers = "2.0"
+bytemuck = "1.24.0"
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
