--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-pipes"
 description = "Virtual pipe organ simulator"
-version = "1.5.1"
+version = "1.5.2"
 license = "GPL-2.0-or-later"
 authors = ["dividebysandwich"]
 repository = "https://github.com/dividebysandwich/rusty-pipes"
@@ -29,7 +29,7 @@ clap = { version = "4.5.54", features = ["derive"] }
 fft-convolver = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.149"
-quick-xml = { version = "0.38", features = ["serde", "serialize"] }
+quick-xml = { version = "0.39", features = ["serde", "serialize"] }
 eframe = "0.33.3"
 egui = "0.33.3"
 rfd = "0.17.1"
@@ -48,6 +48,8 @@ rust-i18n = "3"
 audioadapter = "2.0"
 audioadapter-buffers = "2.0"
 bytemuck = "1.24.0"
+zip = "7.0"
+walkdir = "2.5"
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
@@ -69,7 +71,7 @@ assets = [
 name = "Rusty Pipes"
 identifier = "com.dividebysandwich.rustypipes"
 icon = ["assets/rusty-pipes.icns"]
-version = "1.5.1" 
+version = "1.5.2" 
 copyright = "Copyright 2025-2026 Dividebysandwich"
 category = "Music"
 short_description = "Virtual pipe organ simulator"
