--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-pipes"
 description = "Virtual pipe organ simulator"
-version = "1.5.2"
+version = "1.6.0"
 license = "GPL-2.0-or-later"
 authors = ["dividebysandwich"]
 repository = "https://github.com/dividebysandwich/rusty-pipes"
@@ -50,6 +50,7 @@ audioadapter-buffers = "2.0"
 bytemuck = "1.24.0"
 zip = "7.0"
 walkdir = "2.5"
+wavpack = "0.4.0"
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
@@ -71,7 +72,7 @@ assets = [
 name = "Rusty Pipes"
 identifier = "com.dividebysandwich.rustypipes"
 icon = ["assets/rusty-pipes.icns"]
-version = "1.5.2" 
+version = "1.6.0" 
 copyright = "Copyright 2025-2026 Dividebysandwich"
 category = "Music"
 short_description = "Virtual pipe organ simulator"
