--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,6 +49,7 @@ jobs:
           sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
           sudo flatpak install -y flathub org.freedesktop.Sdk//25.08 \
                                           org.freedesktop.Platform//25.08 \
+                                          org.freedesktop.Sdk.Extension.llvm20//25.08 \
                                           org.freedesktop.Sdk.Extension.rust-stable//25.08
 
       - name: Vendor Dependencies
