--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-pipes"
 description = "Virtual pipe organ simulator"
-version = "1.6.6"
+version = "1.6.7"
 license = "GPL-2.0-or-later"
 authors = ["dividebysandwich"]
 repository = "https://github.com/dividebysandwich/rusty-pipes"
@@ -25,7 +25,7 @@ num-traits = "0.2.19"
 log = "0.4.29"
 simplelog = "0.12"
 midly = "0.5"
-clap = { version = "4.5.56", features = ["derive"] }
+clap = { version = "4.5.57", features = ["derive"] }
 fft-convolver = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.149"
@@ -35,7 +35,7 @@ egui = "0.33.3"
 rfd = "0.17.2"
 confy = "2.0"
 dirs = "6.0"
-hotpath = { version = "0.9.3", optional = true }
+hotpath = { version = "0.10.0", optional = true }
 rayon = "1.11"
 symphonia = { version = "0.5", features = ["wav"] }
 sys-locale = "0.3.2"
@@ -48,8 +48,9 @@ rust-i18n = "3"
 audioadapter = "2.0"
 audioadapter-buffers = "2.0"
 bytemuck = "1.25.0"
-zip = "7.2"
+zip = "7.4.0"
 walkdir = "2.5"
+flate2 = "1.1.9"
 
 [features]
 hotpath = ["dep:hotpath", "hotpath/hotpath"]
@@ -71,7 +72,7 @@ assets = [
 name = "Rusty Pipes"
 identifier = "com.dividebysandwich.rustypipes"
 icon = ["assets/rusty-pipes.icns"]
-version = "1.6.6" 
+version = "1.6.7" 
 copyright = "Copyright 2025-2026 Dividebysandwich"
 category = "Music"
 short_description = "Virtual pipe organ simulator"
