Fix arm64 apt sources: use ports.ubuntu.com, pin existing to amd64

--- a/.github/workflows/build-arm64-deb.yml
+++ b/.github/workflows/build-arm64-deb.yml
@@ -23,18 +23,23 @@ jobs:
 
       - name: Install cross-compilation tools
         run: |
-          # Add arm64 architecture and sources first
+          # Add arm64 architecture
           sudo dpkg --add-architecture arm64
-          # Pin existing sources to amd64 only
-          sudo sed -i 's/^deb \([^[]\)/deb [arch=amd64] \1/' /etc/apt/sources.list 2>/dev/null || true
-          for f in /etc/apt/sources.list.d/*.list; do
-            [ -f "$f" ] && sudo sed -i 's/^deb \([^[]\)/deb [arch=amd64] \1/' "$f" 2>/dev/null || true
+          # Pin ALL existing sources to amd64 only (sources.list and .d/*.list and .d/*.sources)
+          sudo sed -i 's/^deb http/deb [arch=amd64] http/' /etc/apt/sources.list 2>/dev/null || true
+          sudo sed -i 's/^deb-src http/deb-src [arch=amd64] http/' /etc/apt/sources.list 2>/dev/null || true
+          for f in /etc/apt/sources.list.d/*.list /etc/apt/sources.list.d/*.sources; do
+            [ -f "$f" ] && sudo sed -i '/^Types:/a Architectures: amd64' "$f" 2>/dev/null || true
+            [ -f "$f" ] && sudo sed -i 's/^deb http/deb [arch=amd64] http/' "$f" 2>/dev/null || true
           done
-          # Add arm64 package sources
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ noble main restricted universe multiverse" | sudo tee /etc/apt/sources.list.d/arm64.list
-          echo "deb [arch=arm64] http://ports.ubuntu.com/ noble-updates main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list.d/arm64.list
+          # Add arm64 sources (only ports.ubuntu.com has arm64)
+          cat <<'SOURCES' | sudo tee /etc/apt/sources.list.d/arm64-ports.list
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ noble main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ noble-updates main restricted universe multiverse
+          deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ noble-security main restricted universe multiverse
+          SOURCES
           sudo apt-get update
-          # Install cross-compiler and arm64 dev libraries
+          # Install cross-compiler (amd64) and arm64 dev libraries
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu cmake pkg-config
           sudo apt-get install -y libasound2-dev:arm64 libpulse-dev:arm64 \
             libjack-jackd2-dev:arm64 libx11-dev:arm64 libxkbcommon-dev:arm64 \
