--- a/.github/workflows/build-arm64-deb.yml
+++ b/.github/workflows/build-arm64-deb.yml
@@ -38,7 +38,7 @@ jobs:
         run: cross build --release --target aarch64-unknown-linux-gnu
 
       - name: Build deb package
-        run: cargo deb --no-build --target aarch64-unknown-linux-gnu
+        run: cargo deb --no-build --no-strip --target aarch64-unknown-linux-gnu
 
       - name: Upload arm64 deb
         uses: actions/upload-artifact@v4
